--- a/app/src/main/res/layout/item_restaurant_list.xml
+++ b/app/src/main/res/layout/item_restaurant_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_motionlayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,12 +13,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="TCKR"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="REMOVE" />
 
     <TextView
         android:id="@+id/title_textview"
@@ -26,34 +27,34 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:text="Temp Text"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/quantity_textview"
+        app:layout_constraintEnd_toStartOf="@+id/number_textview"
         app:layout_constraintStart_toStartOf="@+id/ticker_textview"
-        app:layout_constraintTop_toBottomOf="@+id/ticker_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/ticker_textview"
+        tools:text="Title Goes here" />
 
     <TextView
-        android:id="@+id/price_textview"
+        android:id="@+id/distance_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="$5.00"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="$1.00" />
 
     <TextView
-        android:id="@+id/quantity_textview"
+        android:id="@+id/number_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/price_textview"
-        app:layout_constraintEnd_toStartOf="@+id/price_textview"
-        app:layout_constraintTop_toTopOf="@+id/price_textview" />
+        app:layout_constraintBottom_toBottomOf="@+id/distance_textview"
+        app:layout_constraintEnd_toStartOf="@+id/distance_textview"
+        app:layout_constraintTop_toTopOf="@+id/distance_textview" />
 
     <View
         android:id="@+id/view2"
@@ -78,8 +79,8 @@
         android:layout_width="50dp"
         android:layout_height="0dp"
         android:background="#C1C1C1"
-        app:layout_constraintBottom_toBottomOf="@+id/price_textview"
-        app:layout_constraintStart_toStartOf="@+id/quantity_textview"
-        app:layout_constraintTop_toTopOf="@+id/price_textview" />
+        app:layout_constraintBottom_toBottomOf="@+id/distance_textview"
+        app:layout_constraintStart_toStartOf="@+id/number_textview"
+        app:layout_constraintTop_toTopOf="@+id/distance_textview" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
