--- a/app/src/main/res/xml/item_stock_list_scene.xml
+++ b/app/src/main/res/xml/item_stock_list_scene.xml
@@ -21,9 +21,9 @@
             android:id="@+id/view4"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/price_textview"
-            app:layout_constraintTop_toTopOf="@+id/price_textview"
-            app:layout_constraintStart_toStartOf="@id/quantity_textview" />
+            app:layout_constraintBottom_toBottomOf="@+id/distance_textview"
+            app:layout_constraintTop_toTopOf="@+id/distance_textview"
+            app:layout_constraintStart_toStartOf="@id/number_textview" />
     </ConstraintSet>
     <ConstraintSet
         android:id="@+id/loading_end"
@@ -46,9 +46,9 @@
             android:id="@+id/view4"
             android:layout_width="40dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/price_textview"
-            app:layout_constraintTop_toTopOf="@+id/price_textview"
-            app:layout_constraintStart_toStartOf="@id/quantity_textview" />
+            app:layout_constraintBottom_toBottomOf="@+id/distance_textview"
+            app:layout_constraintTop_toTopOf="@+id/distance_textview"
+            app:layout_constraintStart_toStartOf="@id/number_textview" />
     </ConstraintSet>
     <Transition
         app:constraintSetStart="@+id/loading_start"
@@ -66,9 +66,9 @@
             android:id="@+id/view4"
             android:layout_width="50dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/price_textview"
-            app:layout_constraintTop_toTopOf="@+id/price_textview"
-            app:layout_constraintStart_toStartOf="@+id/quantity_textview"
+            app:layout_constraintBottom_toBottomOf="@+id/distance_textview"
+            app:layout_constraintTop_toTopOf="@+id/distance_textview"
+            app:layout_constraintStart_toStartOf="@+id/number_textview"
             android:visibility="gone" />
         <Constraint
             android:id="@+id/view2"
