--- a/app/src/main/res/layout/restaurant_list_fragment.xml
+++ b/app/src/main/res/layout/restaurant_list_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.MainFragment" >
+    tools:context=".fragment.RestaurantListFragment" >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/restaurant_list_recyclerview"
