--- a/app/src/main/res/layout/item_restaurant_list.xml
+++ b/app/src/main/res/layout/item_restaurant_list.xml
@@ -5,10 +5,10 @@
     android:id="@+id/item_motionlayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:layoutDescription="@xml/item_stock_list_scene">
+    app:layoutDescription="@xml/item_restaurant_list_scene">
 
     <TextView
-        android:id="@+id/ticker_textview"
+        android:id="@+id/name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -16,12 +16,12 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/restaurant_imageview"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="REMOVE" />
 
     <TextView
-        android:id="@+id/title_textview"
+        android:id="@+id/desc_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -29,58 +29,32 @@
         android:layout_marginBottom="16dp"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/number_textview"
-        app:layout_constraintStart_toStartOf="@+id/ticker_textview"
-        app:layout_constraintTop_toBottomOf="@+id/ticker_textview"
+        app:layout_constraintEnd_toStartOf="@+id/status_textview"
+        app:layout_constraintStart_toStartOf="@+id/name_textview"
+        app:layout_constraintTop_toBottomOf="@+id/name_textview"
         tools:text="Title Goes here" />
 
     <TextView
-        android:id="@+id/distance_textview"
+        android:id="@+id/status_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/desc_textview"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/desc_textview"
+        tools:text="5 min" />
+
+    <ImageView
+        android:id="@+id/restaurant_imageview"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="h,16:9"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="$1.00" />
-
-    <TextView
-        android:id="@+id/number_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/distance_textview"
-        app:layout_constraintEnd_toStartOf="@+id/distance_textview"
-        app:layout_constraintTop_toTopOf="@+id/distance_textview" />
-
-    <View
-        android:id="@+id/view2"
-        android:layout_width="150dp"
-        android:layout_height="0dp"
-        android:background="#C1C1C1"
-        app:layout_constraintBottom_toBottomOf="@+id/ticker_textview"
-        app:layout_constraintStart_toStartOf="@+id/ticker_textview"
-        app:layout_constraintTop_toTopOf="@+id/ticker_textview" />
-
-    <View
-        android:id="@+id/view3"
-        android:layout_width="250dp"
-        android:layout_height="0dp"
-        android:background="#C1C1C1"
-        app:layout_constraintBottom_toBottomOf="@+id/title_textview"
-        app:layout_constraintStart_toStartOf="@+id/title_textview"
-        app:layout_constraintTop_toTopOf="@+id/title_textview" />
-
-    <View
-        android:id="@+id/view4"
-        android:layout_width="50dp"
-        android:layout_height="0dp"
-        android:background="#C1C1C1"
-        app:layout_constraintBottom_toBottomOf="@+id/distance_textview"
-        app:layout_constraintStart_toStartOf="@+id/number_textview"
-        app:layout_constraintTop_toTopOf="@+id/distance_textview" />
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
