--- a/app/src/main/res/layout/item_restaurant_list.xml
+++ b/app/src/main/res/layout/item_restaurant_list.xml
@@ -57,4 +57,22 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
+    <View
+        android:id="@+id/view1_loading"
+        android:layout_width="150dp"
+        android:layout_height="0dp"
+        android:background="#C6C6C6"
+        app:layout_constraintBottom_toBottomOf="@+id/name_textview"
+        app:layout_constraintStart_toStartOf="@+id/name_textview"
+        app:layout_constraintTop_toTopOf="@+id/name_textview" />
+
+    <View
+        android:id="@+id/view2_loading"
+        android:layout_width="200dp"
+        android:layout_height="0dp"
+        android:background="#C6C6C6"
+        app:layout_constraintBottom_toBottomOf="@+id/desc_textview"
+        app:layout_constraintStart_toStartOf="@+id/desc_textview"
+        app:layout_constraintTop_toTopOf="@+id/desc_textview" />
+
 </androidx.constraintlayout.motion.widget.MotionLayout>
