--- a/app/src/main/res/xml/item_restaurant_list_scene.xml
+++ b/app/src/main/res/xml/item_restaurant_list_scene.xml
@@ -4,13 +4,69 @@
 
     <ConstraintSet android:id="@+id/start">
 
+        <Constraint
+            android:id="@+id/view1_loading"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/name_textview"
+            app:layout_constraintTop_toTopOf="@+id/name_textview"
+            app:layout_constraintStart_toStartOf="@+id/name_textview" />
+        <Constraint
+            android:id="@+id/view2_loading"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/desc_textview"
+            app:layout_constraintTop_toTopOf="@+id/desc_textview"
+            app:layout_constraintStart_toStartOf="@+id/desc_textview" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
 
+        <Constraint
+            android:id="@+id/view1_loading"
+            android:layout_width="150dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/name_textview"
+            app:layout_constraintTop_toTopOf="@+id/name_textview"
+            app:layout_constraintStart_toStartOf="@+id/name_textview" />
+        <Constraint
+            android:id="@+id/view2_loading"
+            android:layout_width="200dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/desc_textview"
+            app:layout_constraintTop_toTopOf="@+id/desc_textview"
+            app:layout_constraintStart_toStartOf="@+id/desc_textview" />
     </ConstraintSet>
 
     <Transition
         app:constraintSetEnd="@id/end"
-        app:constraintSetStart="@+id/start" />
+        app:constraintSetStart="@+id/start"
+        app:autoTransition="animateToEnd"
+        android:id="@+id/loading_transition"
+        app:duration="1000" />
+    <Transition
+        app:constraintSetStart="@+id/start"
+        app:constraintSetEnd="@+id/end"
+        android:id="@+id/reset_transition"
+        app:autoTransition="jumpToStart" />
+    <ConstraintSet
+        android:id="@+id/loading_end"
+        app:deriveConstraintsFrom="@+id/end" >
+        <Constraint
+            android:id="@+id/view1_loading"
+            android:layout_width="150dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/name_textview"
+            app:layout_constraintTop_toTopOf="@+id/name_textview"
+            app:layout_constraintStart_toStartOf="@+id/name_textview"
+            android:alpha="0.0" />
+        <Constraint
+            android:id="@+id/view2_loading"
+            android:layout_width="200dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/desc_textview"
+            app:layout_constraintTop_toTopOf="@+id/desc_textview"
+            app:layout_constraintStart_toStartOf="@+id/desc_textview"
+            android:alpha="0.0" />
+    </ConstraintSet>
 </MotionScene>
