--- a/app/src/main/res/layout/item_restaurant_list.xml
+++ b/app/src/main/res/layout/item_restaurant_list.xml
@@ -27,6 +27,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:ellipsize="end"
+        android:maxLines="2"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/status_textview"
