--- a/app/src/main/res/xml/fragment_restaurant_details_scene.xml
+++ b/app/src/main/res/xml/fragment_restaurant_details_scene.xml
@@ -12,8 +12,52 @@
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
+        <Constraint
+            android:id="@+id/details_loading1_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="@+id/store_name_textview"
+            motion:layout_constraintTop_toTopOf="@+id/store_name_textview"
+            motion:layout_constraintStart_toStartOf="@+id/store_name_textview" />
+        <Constraint
+            android:id="@+id/details_loading2_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="@+id/store_desc_textview"
+            motion:layout_constraintTop_toTopOf="@+id/store_desc_textview"
+            motion:layout_constraintStart_toStartOf="@+id/store_desc_textview" />
+        <Constraint
+            android:id="@+id/details_loading3_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="@+id/phone_textview"
+            motion:layout_constraintTop_toTopOf="@+id/phone_textview"
+            motion:layout_constraintStart_toStartOf="@+id/phone_textview" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
+        <Constraint
+            android:id="@+id/details_loading1_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="@+id/store_name_textview"
+            motion:layout_constraintTop_toTopOf="@+id/store_name_textview"
+            motion:layout_constraintStart_toStartOf="@+id/store_name_textview"
+            motion:layout_constraintEnd_toEndOf="@+id/store_name_textview" />
+        <Constraint
+            android:id="@+id/details_loading2_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="@+id/store_desc_textview"
+            motion:layout_constraintTop_toTopOf="@+id/store_desc_textview"
+            motion:layout_constraintStart_toStartOf="@+id/store_desc_textview"
+            motion:layout_constraintEnd_toEndOf="@+id/store_desc_textview" />
+        <Constraint
+            android:id="@+id/details_loading3_view"
+            android:layout_width="225dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="@+id/phone_textview"
+            motion:layout_constraintTop_toTopOf="@+id/phone_textview"
+            motion:layout_constraintStart_toStartOf="@+id/phone_textview" />
     </ConstraintSet>
 </MotionScene>
