Add favorite status to row item

--- a/app/src/main/res/layout/item_restaurant_list.xml
+++ b/app/src/main/res/layout/item_restaurant_list.xml
@@ -77,4 +77,13 @@
         app:layout_constraintStart_toStartOf="@+id/desc_textview"
         app:layout_constraintTop_toTopOf="@+id/desc_textview" />
 
+    <ImageView
+        android:id="@+id/favorite_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/status_textview"
+        app:layout_constraintEnd_toEndOf="@+id/status_textview"
+        app:srcCompat="@android:drawable/btn_star" />
+
 </androidx.constraintlayout.motion.widget.MotionLayout>
