--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/restaurantListFragment">
+    app:startDestination="@id/loginFragment2">
 
     <fragment
         android:id="@+id/restaurantListFragment"
@@ -21,5 +21,14 @@
         <argument
             android:name="id"
             app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment2"
+        android:name="com.creativedrewy.restaurantfinder.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment2_to_restaurantListFragment"
+            app:destination="@id/restaurantListFragment" />
     </fragment>
 </navigation>
